# rs310p_dc_psu

./: .gitignore  LICENSE.txt  Pipfile  README.md  build.sh  controller.py  create_pip_env.sh  create_poetry_env.bat  create_poetry_env.sh  psu.py  pyproject.toml  view.py
.github/workflows/: package-deb.yaml
debian/: control  postinst  preinst
installers/: rs310p_dc_psu-1.8-py3-none-any.whl  rs310p_dc_psu-1.9-py3-none-any.whl  rs310p_dc_psu-2.0-py3-none-any.whl
rs310p_dc_psu/: controller.py  psu.py  view.py
windows/: build.bat  install.bat  psu-gui.bat  rs310p-dc-psu.bat  rs310p-dc-psu.iss  start_powershell.bat  start_rs310p_dc_psu_from_powershell.bat  uninstall.bat
